# Libretto

./: README.md  cli.py  docker-compose.yaml  makefile  mypy.ini  pyproject.toml  ruff.toml  settings.toml  settings.yaml
alembic/: env.py
alembic/versions/: da21d49af126_init_fake_migration_for_test.py
src/: app.py  config.py  lifespan.py  logger.py  main.py
src/api/: books.py  loans.py  routes.py  users.py
src/domain/: enums.py  models.py
src/helpers/: route_classes.py
src/models/: __init__.py  books_model.py  loans_model.py  users_model.py
src/repositories/: base_repository.py  book_repository.py
src/storages/: db.py
tests/: test_domain_models.py
