[tool.poetry]
name = "libretto"
version = "0.1.0"
description = ""
authors = ["Glebasiq"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
uvicorn = "^0.34.0"
ruff = "^0.9.2"
pytest = "^8.3.4"
faker = "^33.3.1"
mypy = "^1.14.1"
typer = "^0.15.1"
structlog = "^25.1.0"
dynaconf = "^3.2.7"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
aioredis = "^2.0.1"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
